fix center alignment of the thing

--- a/src/App.css
+++ b/src/App.css
@@ -23,16 +23,25 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 body {
-  width: 100%;
+  width: 50%;
   height: 100%;
+  align-items: center;
   background: rgb(255, 255, 255);
   background: linear-gradient(30deg, rgb(255, 106, 95) 30%, rgba(255, 255, 255, 1) 30%);
 }
 
 html {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
+}
+
+ul {
+  padding-left: 0;
 }
